--- a/tokaViikko/puhelinluettelo/src/index.css
+++ b/tokaViikko/puhelinluettelo/src/index.css
@@ -1,27 +1,32 @@
 body {
-  width: 500px;
+  width: 350px;
   margin: 0 auto;
   font-family: sans-serif;
+  padding-left: 2em;
+  border: 1px solid #CCC;
+  border-radius: 0.5em;
 }
 
 .info{
   color: rgb(255, 255, 255);
-  background: rgb(0, 23, 128);
-  font-size: 20px;
-  border-style: solid;
+  background: gray;
+  font-size: 15px;
+  border-style: initial;
   border-radius: 5px;
-  padding: 10px;
+  padding: 1em;
   margin-bottom: 10px;
+  margin-right: 50px;
+}
+
+hr {
+  margin-right: 50px;
 }
 
 form {
   /* Just to center the form on the page */
   margin: 0 auto;
-  width: 400px;
+  width: 500px;
   /* To see the outline of the form */
-  padding: 1em;
-  border: 1px solid #CCC;
-  border-radius: 1em;
 }
 
 form div + div {
