48. tehtävän 1. osa tehty (puhelinluettelon frontendiä muutettu hieman)

--- a/tokaViikko/puhelinluettelo/src/index.css
+++ b/tokaViikko/puhelinluettelo/src/index.css
@@ -1,10 +1,11 @@
 body {
   width: 350px;
   margin: 0 auto;
+  margin-top: 4em; 
   font-family: sans-serif;
   padding-left: 2em;
-  border: 1px solid #CCC;
-  border-radius: 0.5em;
+  border: 3px outset tomato;
+  border-radius: 2em;
 }
 
 .info{
