93. tehtävä tehty. 94 skipataan, en osaa tuota muokkausta yhtään

--- a/viidesViikko/bloglist-frontend/src/index.css
+++ b/viidesViikko/bloglist-frontend/src/index.css
@@ -15,15 +15,7 @@ h1 {
   font-size: 15px;
 }
 
-.clickedBlog {
-  margin-left: 0px;
-}
-
-.defaultVisibilityBlog{
-  margin-left: 0px;
-}
-
-.clickableBlog{
+.clickedBlog, defaultVisibilityBlog, clickableBlog, loginForm, blogForm{
   margin-left: 0px;
 }
 
