--- a/viidesViikko/bloglist-frontend/src/index.css
+++ b/viidesViikko/bloglist-frontend/src/index.css
@@ -27,6 +27,7 @@ h1 {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+  border-width: 2px;
 }
 
 .success {
@@ -37,6 +38,7 @@ h1 {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+  border-width: 2px;
 }
 
 .blogs {
@@ -51,4 +53,8 @@ h1 {
   grid-template-columns: 800px 150px;
   border-style: solid;
   border-width: 1px;
+}
+
+li {
+  list-style-type: circle
 }
